--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -25,6 +25,11 @@
 
     <progress value="0" max="100"></progress>
 
+    <form method="get" action="/search">
+        <input type="text" name="q">
+        <input type="submit">
+    </form>
+
     <ul>
         <?php foreach ($files as $file) : ?>
             <li>
