--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -3,6 +3,9 @@
 <head>
     <title>filehosting</title>
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="/css/jquery-ui.min.css">
+    <script type="text/javascript" src="/js/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
 </head>
 <body>
     <h1>filehosting</h1>
@@ -41,5 +44,6 @@
     </ul>
 
     <script type="text/javascript" src="/js/script.js"></script>
+    <script type="text/javascript" src="/js/autocomplete.js"></script>
 </body>
 </html>
