--- a/templates/search.phtml
+++ b/templates/search.phtml
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>filehosting</title>
+    <link rel="stylesheet" href="/css/jquery-ui.min.css">
+    <script type="text/javascript" src="/js/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
 </head>
 <body>
     <h1>filehosting</h1>
@@ -20,5 +23,7 @@
             </li>
         <?php endforeach; ?>
     </ul>
+
+    <script type="text/javascript" src="/js/autocomplete.js"></script>
 </body>
 </html>
