Small drag&drop refactoring: onclick event and fixes

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -43,7 +43,7 @@
         <?php endforeach; ?>
     </ul>
 
-    <script type="text/javascript" src="/js/script.js"></script>
+    <script type="text/javascript" src="/js/dragndrop.js"></script>
     <script type="text/javascript" src="/js/autocomplete.js"></script>
 </body>
 </html>
