--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -8,6 +8,10 @@
     text-align: center;
 }
 
+.dropzone:hover {
+    box-shadow: inset 0 0 5px grey;
+}
+
 .dropzone p {
     display: block;
     margin: 0 auto;
