Implemented tree comments

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -22,3 +22,24 @@ progress {
     display: none;
     width:225px;
 }
+
+.comments {
+    margin: 10px;
+}
+
+.comments form input, .comments form textarea {
+    display: block;
+}
+
+.comment {
+    margin: 10px 0;
+}
+
+.date {
+    font-size: 12px;
+    color: grey;
+}
+
+.comments .content {
+    margin: 5px 0;
+}
