--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -23,7 +23,7 @@
     </form>
 
     <div class="dropzone">
-        <p>Drop here</p>
+        Drop here
     </div>
 
     <progress value="0" max="100"></progress>
