Switch to Twig with a Bootstrap

--- a/templates/download.phtml
+++ b/templates/download.phtml
@@ -1,70 +1,63 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Download</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-</head>
-<body>
-    <h1>filehosting</h1>
+{% extends 'base.html' %}
 
-    <h2><?= $file->getOriginalName() ?></h2>
+{% block content %}
+    <h2>{{ file.getOriginalName() }}</h2>
 
-    <?php if (App\Model::isImage($file->getMimeType())) : ?>
-        <img src="/<?= $file->getThumbnail() ?>">
-    <?php endif; ?>
+    {% if model.isImage(file.getMimeType()) %}
+        <img class="media" src="/{{ file.getThumbnail() }}">
+    {% endif %}
 
-    <?php if (App\Model::isAudio($file->getMimeType())) : ?>
-        <audio src="/<?= $file->getPath() ?>/<?=$file->getNewName() ?>" controls></audio>
-    <?php endif; ?>    
+    {% if model.isAudio(file.getMimeType()) %}
+        <audio class="media" src="/{{ file.getPath() }}/{{ file.getNewName() }}" controls></audio>
+    {% endif %}    
 
-    <?php if (App\Model::isVideo($file->getMimeType())) : ?>
-        <video src="/<?= $file->getPath() ?>/<?=$file->getNewName() ?>" controls></video>
-    <?php endif; ?>
+    {% if model.isVideo(file.getMimeType()) %}
+        <video class="media" src="/{{ file.getPath() }}/{{ file.getNewName() }}" controls></video>
+    {% endif %}
 
-    <ul>
-        <li>Size: <?= $file->getSize() ?></li>
-        <li>Type: <?= $file->getMimeType() ?></li>
+    <ul class="list-unstyled files">
+        <li>Size: {{ file.getSize() }}</li>
+        <li>Type: {{ file.getMimeType() }}</li>
 
         <!-- mb somthing more -->
     </ul>
 
-    <a href="<?= $router->pathFor('dwnld', ['id' => $file->getId()]) ?>">
-        Download <?= $file->getOriginalName() ?>
+    <a href="{{ path_for('dwnld', {'id': file.getId()}) }}">
+        Download {{ file.getOriginalName() }}
     </a>
 
     <hr>
 
     <div class="comments">
-        <form method="POST" action="<?= $router->pathFor('download', ['id' => $file->getId()])?>">
-            <input type="text" name="author">
-            <textarea name="content"></textarea>
+        <form method="POST" class="" action="{{ path_for('download', {'id': file.getId()}) }}">
+            <div class="form-group"><input type="text" class="form-control" name="author" placeholder="Name"></div>
+            <div class="form-group"><textarea class="form-control" name="content"></textarea></div>
+            
+            <button type="submit" class="btn btn-default">Submit</button>
 
-            <input type="submit">
-
-            <input type="hidden" name="<?= $csrfNameKey ?>" value="<?= $csrfName ?>">
-            <input type="hidden" name="<?= $csrfValueKey ?>" value="<?= $csrfValue ?>">
+            <input type="hidden" name="{{ csrfNameKey }}" value="{{ csrfName }}">
+            <input type="hidden" name="{{ csrfValueKey }}" value="{{ csrfValue }}">
         </form>
 
-        <?php foreach($file->getComments() as $comment) : ?>
-            <div class="comment" style="margin-left:<?= $comment->getDepth() * 20?>px">
-                <b><?= $comment->getAuthor() ?></b> <span class="date"><?= $comment->getDate()->format('Y-m-d H:i:s'); ?></span>
+        {% for comment in file.getComments() %}
+            <div class="comment" style="margin-left:{{ comment.getDepth() * 20 }}px">
+                <b>{{ comment.getAuthor() }}</b> <span class="date">{{ comment.getDate().format('Y-m-d H:i:s') }}</span>
                 <div class="content">
-                    <?= $comment->getContent() ?>
+                    {{ comment.getContent() }}
                 </div>
 
-                <form method="POST" action="<?= $router->pathFor('download', ['id' => $file->getId()])?>" style="margin-left:<?= ($comment->getDepth() + 1) * 20 ?>px">
-                    <input type="hidden" name="parent" value="<?= $comment->getId() ?>">
+                <form method="POST" action="{{ path_for('download', {'id': file.getId()}) }}" style="margin-left:{{ (comment.getDepth() + 1) * 20 }}px">
+                    <input type="hidden" name="parent" value="{{ comment.getId() }}">
 
-                    <input type="text" name="author">
-                    <textarea name="content"></textarea>
+                    <div class="form-group"><input type="text" class="form-control" name="author"></div>
+                    <div class="form-group"><textarea class="form-control" name="content"></textarea></div>
 
-                    <input type="submit">
+                    <button type="submit" class="btn btn-default">Submit</button>
 
-                    <input type="hidden" name="<?= $csrfNameKey ?>" value="<?= $csrfName ?>">
-                    <input type="hidden" name="<?= $csrfValueKey ?>" value="<?= $csrfValue ?>">
+                    <input type="hidden" name="{{ csrfNameKey }}" value="{{ csrfName }}">
+                    <input type="hidden" name="{{ csrfValueKey }}" value="{{ csrfValue }}">
                 </form>
             </div>
-        <?php endforeach; ?>    
+        {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
