--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,9 +1,51 @@
+a {
+    color: #719e40;
+}
+
+a:hover {
+    color: #4a682a;
+}
+
+.form-control:focus {
+    border-color: #719e40;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102, 233, 205, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102, 233, 205, 0.6);
+}
+
+h1 {
+    margin: 0;
+    line-height: 20px;
+}
+
+.container {
+    border: solid 1px #e7e7e7;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 0 auto;
+    background-color: #f8f8f8;
+}
+
+form {
+    margin: 15px 0;
+}
+
+.form-group {
+    margin-bottom: 5px;
+}
+
+input[type="file"] {
+    display: inline;
+}
+
+form[action="/search"] > input[type="text"] {
+    width: 90%;
+}
+
 .dropzone {
     display: none;
     border: dashed 1px grey;
     margin: 15px 0;
-    padding: 25px 0;
-    width:225px;
+    padding: 50px 0;
 
     text-align: center;
 }
@@ -12,9 +54,20 @@
     box-shadow: inset 0 0 5px grey;
 }
 
-progress {
+.progress {
     display: none;
-    width:225px;
+}
+
+.progress-bar {
+    background-color: #719e40;
+}
+
+.files {
+    font-size: 18px;
+}
+
+.media {
+    margin: 10px 0;
 }
 
 .comments {
@@ -22,7 +75,7 @@ progress {
 }
 
 .comments form input, .comments form textarea {
-    display: block;
+    width: auto;
 }
 
 .comment {
