--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,49 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>filehosting</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="/css/jquery-ui.min.css">
-    <script type="text/javascript" src="/js/jquery-1.12.1.min.js"></script>
-    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
-</head>
-<body>
-    <h1>filehosting</h1>
+{% extends 'base.html' %}
 
-    <form method="post" action="/" enctype="multipart/form-data">
-        <input type="file" name="file">
-        <input type="submit" name="submit">
+{% block content %}
+        {% if error is defined and error != 0 %}
+            <div class="alert alert-danger" role="alert">
+                Error code #{{ error }}
+            </div>
+        {% endif %}
 
-        <?php if (isset($error) and $error != 0) : ?>
-            <span><?php var_dump($error) ?></span>
-        <?php endif; ?>
+        <form method="post" action="/" enctype="multipart/form-data">
+            <input type="file" name="file">
+            <button type="submit" class="btn btn-default">Submit</button>
 
-        <input type="hidden" name="<?= $csrfNameKey ?>" value="<?= $csrfName ?>">
-        <input type="hidden" name="<?= $csrfValueKey ?>" value="<?= $csrfValue ?>">
-    </form>
+            <input type="hidden" name="{{ csrfNameKey }}" value="{{ csrfName }}">
+            <input type="hidden" name="{{ csrfValueKey }}" value="{{ csrfValue }}">
+        </form>
 
-    <div class="dropzone">
-        Drop here
-    </div>
+        <div class="dropzone">
+            Drop here
+        </div>
 
-    <progress value="0" max="100"></progress>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+        </div>
 
-    <form method="get" action="/search">
-        <input type="text" name="q">
-        <input type="submit">
-    </form>
-
-    <ul>
-        <?php foreach ($files as $file) : ?>
-            <li>
-                <a href="<?= $router->pathFor('download', ['id' => $file->getId()])?>">
-                    <?= $file->getOriginalName() ?>
-                </a>
-            </li>
-        <?php endforeach; ?>
-    </ul>
-
-    <script type="text/javascript" src="/js/dragndrop.js"></script>
-    <script type="text/javascript" src="/js/autocomplete.js"></script>
-</body>
-</html>
+        <ul class="list-unstyled files">
+            {% for file in files %}
+                <li>
+                    <a href="{{ path_for('download', {'id': file.getId }) }}">
+                        {{ file.getOriginalName }}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul> 
+{% endblock %}
