Little extension for 404 and error handlers

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -90,3 +90,7 @@ form[action="/search"] > input[type="text"] {
 .comments .content {
     margin: 5px 0;
 }
+
+.four-hundred-four {
+    text-align: center;
+}
