--- a/templates/base.html
+++ b/templates/base.html
@@ -44,5 +44,6 @@
 
     <script type="text/javascript" src="/js/dragndrop.js"></script>
     <script type="text/javascript" src="/js/autocomplete.js"></script>
+    <script type="text/javascript" src="/js/comments.js"></script>
 </body>
 </html>
