--- a/templates/download.phtml
+++ b/templates/download.phtml
@@ -46,6 +46,7 @@
                 <div class="content">
                     {{ comment.getContent() }}
                 </div>
+                <a class="reply" href="#">Reply</a>
 
                 <form method="POST" action="{{ path_for('download', {'id': file.getId()}) }}" style="margin-left:{{ (comment.getDepth() + 1) * 20 }}px">
                     <input type="hidden" name="parent" value="{{ comment.getId() }}">
