--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -17,10 +17,6 @@ h1 {
     line-height: 20px;
 }
 
-h2 {
-    display: inline-block;
-}
-
 .container {
     border: solid 1px #e7e7e7;
     border-radius: 5px;
@@ -39,10 +35,6 @@ form {
 
 input[type="file"] {
     display: inline;
-}
-
-form[action="/search"] > input[type="text"] {
-    width: 90%;
 }
 
 .dropzone {
@@ -70,6 +62,10 @@ form[action="/search"] > input[type="text"] {
     font-size: 18px;
 }
 
+.title .date {
+    display: block;
+}
+
 .artist {
     display: inline-block;
     margin: 0px;
@@ -88,8 +84,11 @@ form[action="/search"] > input[type="text"] {
     margin: 10px 0;
 }
 
+.media-player + .quality {
+    margin: 10px 0;
+}
+
 .audio-artwork {
-    float: left;
     margin-right: 10px;
     width: 160px;
 }
