--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
             </div>
 
             <form method="get" class="navbar-form navbar-right" role="search" action="/search">
-                <div class="form-group">
+                <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search" name="q">
+                    <span class="input-group-btn"><button type="submit" class="btn btn-default">Search</button></span>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
             </form>
         </div>
     </nav>
