--- a/templates/download.phtml
+++ b/templates/download.phtml
@@ -1,25 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{{ file.getOriginalName() }}</h2>
-    <span>{{ file.getDate().format('Y-m-d H:i:s') }}</span>
-
-    {% if file.isImage() %}
-        <div>
-            <img class="media" src="/{{ file.getThumbnail() }}">
-        </div>
-
-        <ul class="list-unstyled">
-            <li><b>Format:</b> {{ file.getInfo().format }}</li>
-            <li><b>Width:</b> {{ file.getInfo().resolution_x }}px</li>
-            <li><b>Height:</b> {{ file.getInfo().resolution_y }}px</li>
-        </ul>
-    {% endif %}
+    <div class="title clearfix">
+        <h2 class="pull-left">{{ file.getOriginalName() }}</h2>
+        <span class="date pull-right">{{ file.getDate().format('Y-m-d H:i:s') }}</span>
+    </div>
 
     {% if file.isAudio() %}
         <div class="media-player clearfix">
             {% if file.getThumbnail() is not empty %}          
-                <img class="media audio-artwork" src="/{{ file.getThumbnail() }}">
+                <img class="media pull-left audio-artwork" src="/{{ file.getThumbnail() }}">
             {% endif %}
 
             {% if file.getInfo() is not empty %}
@@ -32,7 +22,7 @@
                         <h3 class="artist">{{ file.getInfo().tags.id3v2.artist }}</h3>
 
                         {% if file.getInfo().tags.id3v2.title is defined %}
-                           — <span class="title">{{ file.getInfo().tags.id3v2.title }}</span>
+                           — <span class="atitle">{{ file.getInfo().tags.id3v2.title }}</span>
                         {% endif %}
                     </div>
                 {% endif %}
@@ -45,13 +35,27 @@
                 <li class="quality">{{ file.getInfo().info.sample_rate }} Hz, {{ file.getInfo().info.bitrate }} bps, {{ file.getInfo().info.channelmode }}</li>
             </ul>
         </div>
-    {% endif %}    
+    {% endif %}
+
+    {% if file.isImage() %}
+        <div>
+            <img class="media img-responsive" src="/{{ file.getThumbnail() }}">
+        </div>
+
+        <ul class="list-unstyled">
+            <li><b>Format:</b> {{ file.getInfo().format }}</li>
+            <li><b>Width:</b> {{ file.getInfo().resolution_x }}px</li>
+            <li><b>Height:</b> {{ file.getInfo().resolution_y }}px</li>
+        </ul>
+    {% endif %}
 
     {% if file.isVideo() %}
-        <div class="media-player">
-            <video class="media" src="/{{ file.getPath() }}/{{ file.getNewName() }}" controls></video>
+        <div class="media-player embed-responsive embed-responsive-16by9">
+            <video class="media embed-responsive-item" src="/{{ file.getPath() }}/{{ file.getNewName() }}" controls></video>
+        </div>
 
-            <div class="quality"><b>Video:</b> {{ file.getInfo().codec }}, {{ file.getInfo().resolution_x }}x{{ file.getInfo().resolution_y }}, {{ file.getInfo().frame_rate }} fps, {{ file.getInfo().bitrate }} bps</div>
+        <div class="quality">
+            <b>Video:</b> {{ file.getInfo().codec }}, {{ file.getInfo().resolution_x }}x{{ file.getInfo().resolution_y }}, {{ file.getInfo().frame_rate }} fps, {{ file.getInfo().bitrate }} bps
         </div>
     {% endif %}
 
