--- a/templates/search.phtml
+++ b/templates/search.phtml
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-        <form method="get" class="clearfix" action="/search">
-            <input type="text" class="form-control pull-left" name="q" value="{{ q }}">
-            <button type="submit" class="btn btn-default pull-right">Submit</button>
+        <form method="get" class="input-group" action="/search">
+            <input type="text" class="form-control" name="q" value="{{ q }}">
+            <span class="input-group-btn"><button type="submit" class="btn btn-default">Search</button></span>
         </form>
 
         <ul class="list-unstyled files">
